--- a/package.json
+++ b/package.json
@@ -10,27 +10,27 @@
 	},
 	"dependencies": {
 		"@react-router/express": "^7.9.4",
-		"@react-router/node": "^7.9.2",
-		"@react-router/serve": "^7.9.2",
-		"@vercel/react-router": "^1.2.3",
+		"@react-router/node": "^7.9.4",
+		"@react-router/serve": "^7.9.4",
 		"compression": "^1.8.1",
 		"express": "^5.1.0",
 		"isbot": "^5.1.31",
 		"morgan": "^1.10.1",
-		"react": "^19.1.1",
-		"react-dom": "^19.1.1",
-		"react-router": "^7.9.2"
+		"react": "^19.2.0",
+		"react-dom": "^19.2.0",
+		"react-router": "^7.9.4"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.2.5",
-		"@react-router/dev": "^7.9.2",
-		"@tailwindcss/vite": "^4.1.13",
-		"@types/node": "^22",
-		"@types/react": "^19.1.13",
-		"@types/react-dom": "^19.1.9",
-		"tailwindcss": "^4.1.13",
-		"typescript": "^5.9.2",
+		"@react-router/dev": "^7.9.4",
+		"@tailwindcss/vite": "^4.1.14",
+		"@types/node": "^22.18.9",
+		"@types/react": "^19.2.2",
+		"@types/react-dom": "^19.2.1",
+		"tailwindcss": "^4.1.14",
+		"typescript": "^5.9.3",
 		"vite": "link:@vercel/react-router/vite",
+		"vite-plugin-react-router-amplify-hosting": "^0.4.0",
 		"vite-tsconfig-paths": "^5.1.4"
 	}
 }
