--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 		"@types/react-dom": "^19.2.1",
 		"tailwindcss": "^4.1.14",
 		"typescript": "^5.9.3",
-		"vite": "link:@vercel/react-router/vite",
+		"vite": "7.1.9",
 		"vite-plugin-react-router-amplify-hosting": "^0.4.0",
 		"vite-tsconfig-paths": "^5.1.4"
 	}
